objects/LLC_BI__Collateral__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Secures_Future_Advances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral is used to secure future advances. This scenario is not valid for use with Aircraft or Ship collateral.</description>
        <label>Secures Future Advances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Serial_Number__c</fullName>
        <description>Users populate this optional field with the serial number of the asset.</description>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Soft_Cost_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Users populate this optional field with the asset amount that is categorized as soft costs.</description>
        <label>Soft Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Soft_Cost_Percentage__c</fullName>
        <description>The system automatically populates this field via a formula. It is used to calculate the percentage of soft cost to asset value.</description>
        <formula>IF( OR(ISBLANK(LLC_BI__Value__c), LLC_BI__Value__c = 0) , 0, LLC_BI__Soft_Cost_Amount__c / LLC_BI__Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of an asset&apos;s value categorized as soft costs.</inlineHelpText>
        <label>Soft Cost Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spousal_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users manually populate this optional text field. This field is used to indicate whether a spousal consent should be created for married owners of the collateral.</description>
        <label>Spousal Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State_Registered__c</fullName>
        <description>This field is optional and manually populated. It is the state where the titled collateral is registered.</description>
        <label>State Registered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__State__c</fullName>
        <description>The state that this piece of Collateral is located at.</description>
        <inlineHelpText>The state that this piece of Collateral is located at.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is manually selected and specifies the collateral pledged status as either Pending (incomplete or not yet available for pledging), Available, or Released (Lien has been released).</description>
        <inlineHelpText>Manually select the collateral pledged status as either Pending (incomplete or not yet available for pledging), Available, or Released (Lien has been released).</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Street_Address__c</fullName>
        <description>This field is optional and manually populated. It is the street address where the collateral is located.</description>
        <inlineHelpText>The street address that this piece of Collateral is located at.</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Subdivision__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the subdivision information for real estate collateral.</description>
        <label>Subdivision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tenure_Type__c</fullName>
        <description>The user populates this picklist field to indicate which legal status the applicant uses to occupy the property. By default, it is blank.</description>
        <inlineHelpText>This field indicates the applicant’s ownership status of the collateral property.</inlineHelpText>
        <label>Tenure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freehold</fullName>
                </value>
                <value>
                    <fullName>Leasehold</fullName>
                </value>
                <value>
                    <fullName>Strata</fullName>
                    <label>Strata (Condominium)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Lien_Position_Value__c</fullName>
        <description>This field is optional and manually populated. It is the value of the third lien position.</description>
        <label>Third Lien Position Value</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Position__c</field>
            <operation>equals</operation>
            <value>3rd</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_City__c</fullName>
        <description>This field is optional and manually populated. This field is used to specify the city of a third party associated with the collateral that is being used to secure a loan.</description>
        <label>Third Party City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Company__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the third party company associated with the collateral being used to secure a loan.</description>
        <label>Third Party Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_State__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the state address of a third party associated with the collateral being used to secure a loan.</description>
        <label>Third Party State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Street_Address__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the physical street address of a third party associated with the collateral being used to secure a loan.</description>
        <label>Third Party Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Zip_Code__c</fullName>
        <description>This field is optional and manually populated. This field is used to specify the ZIP code of the address of a third party associated with the collateral being used to secure a loan.</description>
        <label>Third Party Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Active_Loans_Value__c</fullName>
        <description>The system automatically populates this field with the sum of all loan amounts actively pledged to this piece of collateral.</description>
        <inlineHelpText>Displays the sum of all loan amounts actively pledged to this piece of collateral.</inlineHelpText>
        <label>Total Active Loans Value</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Original_Loan_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Is_Collateral_Value_Rollup_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Collateral_Rollup_Lendable_Value__c</fullName>
        <description>Currency field that represents the summation of collateral Lendable Value field for all direct children of a collateral record. Used in Complex Collateral scenarios.</description>
        <label>Total Collateral Rollup Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Collateral_Rollup_Value__c</fullName>
        <description>Currency field that represents the summation of collateral Value field for all direct children of a collateral record. Used in Complex Collateral scenarios.</description>
        <label>Total Collateral Rollup Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Excluded_Lien_Amount__c</fullName>
        <description>This field is optional and auto-populates as a rollup summary of all lien amounts that are being excluded from calculations.</description>
        <inlineHelpText>This field is a rollup summary of all Lien Amounts that are being excluded from calculations.</inlineHelpText>
        <label>Total Excluded Lien Amount</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Is_Excluded__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Excluded_Pledge_Amount__c</fullName>
        <description>This field is optional and auto-populates as a rollup summary of all pledges that are being excluded from calculations.</description>
        <inlineHelpText>This field is a rollup summary of all Pledges that are being excluded from calculations.</inlineHelpText>
        <label>Total Excluded Pledge Amount</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Amount_Pledged__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Is_Excluded__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Is_Collateral_Value_Rollup_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Lien_Amount__c</fullName>
        <description>This field is optional and manually populated. It is the sum of all liens both held by the bank and liens entered as held by other institutions. It excludes loans in process. This number is based on liens associated to this collateral.</description>
        <inlineHelpText>The sum of all liens both held by the bank and liens entered as held by other institutions, excluding loans in process.</inlineHelpText>
        <label>Total Lien Amount</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Pledge_Amount__c</fullName>
        <description>This field is optional and automatically populated. It is the total pledge amount across all associated loans.</description>
        <inlineHelpText>The total pledge amount across all associated loans.</inlineHelpText>
        <label>Total Pledge Amount</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Amount_Pledged__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Is_Collateral_Value_Rollup_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_County_Filing__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the filing number of a UCC financing statement within a county.</description>
        <label>UCC County Filing #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_Expiration_County__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the date in which the UCC filing in the county will expire. This is typically five years after it was initiated.</description>
        <label>UCC Expiration (County)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_Expiration_State__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the date in which the UCC filing in the state will expire. This is typically five years after it was initiated.</description>
        <label>UCC Expiration (State)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_Financing_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral being used has UCC financial statements currently active on it.</description>
        <label>UCC Financing Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_State_Filing__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the filing number of a UCC financing statement within a state.</description>
        <label>UCC State Filing #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__VIN__c</fullName>
        <description>This field is optional and manually populated. It is the vehicle identification number (VIN) of a piece of collateral.</description>
        <inlineHelpText>Vehicle Identification Number</inlineHelpText>
        <label>VIN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Valuation_Frequency__c</fullName>
        <description>A picklist field used to capture the frequency of collateral valuation. This would be entered by the user when a new valuation is entered. No default value.</description>
        <inlineHelpText>Collateral valuation frequency</inlineHelpText>
        <label>Valuation Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Biennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <description>This field is optional and manually populated. It is the value of the collateral.</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Vessel_Name__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the name of the vessel that is being used to secure the loan.</description>
        <label>Vessel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Vesting_Desc__c</fullName>
        <description>Users manually populate this optional text field. This field is used to describe how the property is held by the owner(s).</description>
        <label>Vesting Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Wholesale_Price__c</fullName>
        <description>The system automatically populates this currency field to record a collateral&apos;s current wholesale price. By default, this field is blank.</description>
        <inlineHelpText>This field displays the collateral&apos;s current wholesale price.</inlineHelpText>
        <label>Wholesale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_Built__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the year a real estate property being used to secure a loan was built.</description>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the year the titled collateral being used to secure the loan was made.</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Yearly_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The user populates this currency field to indicate the yearly tax amount for the collateral property. By default, it is blank.</description>
        <inlineHelpText>Enter the yearly tax amount for the collateral property.</inlineHelpText>
        <label>Yearly Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Zip_Code__c</fullName>
        <description>This field is optional and manually populated. It is the ZIP code where this piece of collateral is located.</description>
        <inlineHelpText>The zip code where this piece of collateral is located.</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__isFutureContext__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is currently not being used.</description>
        <label>isFutureContext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.html</description>
        <externalId>true</externalId>
        <inlineHelpText>This field must entered once the Collateral is created in the Core.  This field allows the Collateral to be updated in the nightly sync from the Core automatically.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>Custom Migration ID for Collateral Mgmt object used by nCino Data Services.</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isTest__c</fullName>
        <label>isTest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Collateral Mgmt</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Full_Address__c</columns>
        <columns>LLC_BI__Value__c</columns>
        <columns>LLC_BI__Branch__c</columns>
        <columns>LLC_BI__Advance_Rate__c</columns>
        <columns>LLC_BI__Collateral_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>COL-{000000}</displayFormat>
        <label>Collateral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Mgmt</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__Government_Contracts</fullName>
        <active>true</active>
        <description>Record Type for Government Contracts Page Layout</description>
        <label>Government Contracts</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Group</fullName>
        <active>true</active>
        <description>Record type for a collateral group</description>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Letter_of_Credit</fullName>
        <active>true</active>
        <description>Record Type for Possessory Letter of Credit Page Layout</description>
        <label>Possessory Letter of Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Life_Insurance</fullName>
        <active>true</active>
        <description>Record Type for Possessory Life Insurance Page Layout</description>
        <label>Possessory Life Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Other</fullName>
        <active>true</active>
        <description>Record Type for Possessory Other Page Layout</description>
        <label>Possessory Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Savings_CD</fullName>
        <active>true</active>
        <description>Record Type for Possessory Savings/CD Page Layout</description>
        <label>Possessory Savings/CD</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Securities</fullName>
        <active>true</active>
        <description>Record Type for Possessory Securities Page Layout</description>
        <label>Possessory Securities</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Real_Estate</fullName>
        <active>true</active>
        <description>Record Type for Real Estate Page Layout</description>
        <label>Real Estate</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Aircraft</fullName>
        <active>true</active>
        <description>Record Type for Titled Aircraft Page Layout</description>
        <label>Titled Aircraft</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Boat</fullName>
        <active>true</active>
        <description>Record Type for Titled Boat Page Layout</description>
        <label>Titled Boat</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Mobile_Home</fullName>
        <active>true</active>
        <description>Record Type for Titled Mobile Home Page Layout</description>
        <label>Titled Mobile Home</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Motor_Vehicle</fullName>
        <active>true</active>
        <description>Record Type for Titled Motor Vehicle Page Layout</description>
        <label>Titled Motor Vehicle</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Trailer_Other</fullName>
        <active>true</active>
        <description>Record Type for Titled Trailer/Other Page Layout</description>
        <label>Titled Trailer/Other</label>
    </recordTypes>
</CustomObject>